# Parchment

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
.claude/memory/: MEMORY.md
components/battery/: CMakeLists.txt  battery.c  battery.h
components/book_store/: CMakeLists.txt  book_store.c
components/book_store/include/: book_store.h
components/epd_driver/: CMakeLists.txt  epd_driver.c
components/epd_driver/include/: epd_driver.h
components/epub_reader/: CMakeLists.txt  epub_reader.c
components/epub_reader/include/: epub_reader.h
components/epub_reader/miniz/: miniz_export.h
components/font_engine/: CMakeLists.txt
components/font_engine/include/font_engine/: font_engine.h
components/font_engine/src/: font_cache.c  font_loader.c  font_rle.c  font_scaler.c
components/font_manager/: CMakeLists.txt  font_manager.c
components/font_manager/include/: font_manager.h
components/gt911/: CMakeLists.txt  gt911.c
components/gt911/include/: gt911.h
components/ink_ui/: CMakeLists.txt  Kconfig
components/ink_ui/include/ink_ui/: InkUI.h
components/ink_ui/include/ink_ui/core/: Application.h  Canvas.h  EpdDriver.h  Event.h  FlexLayout.h  Geometry.h  GestureRecognizer.h  ModalPresenter.h  NavigationController.h  Profiler.h  RenderEngine.h  View.h  ViewController.h
components/ink_ui/include/ink_ui/hal/: DisplayDriver.h  Esp32Platform.h  Esp32SystemInfo.h  Esp32TouchDriver.h  FontProvider.h  Platform.h  SystemInfo.h  TouchDriver.h
components/ink_ui/include/ink_ui/views/: AlertView.h  ButtonView.h  HeaderView.h  IconView.h  PageIndicatorView.h  ProgressBarView.h  SeparatorView.h  ShadowCardView.h  SheetView.h  StatusBarView.h  TextLabel.h
components/ink_ui/src/core/: Application.cpp  Canvas.cpp  EpdDriver.cpp  FlexLayout.cpp  Geometry.cpp  GestureRecognizer.cpp  ModalPresenter.cpp  NavigationController.cpp  RenderEngine.cpp  View.cpp  ViewController.cpp
components/ink_ui/src/hal/: Esp32Platform.cpp  Esp32SystemInfo.cpp  Esp32TouchDriver.cpp
components/ink_ui/src/views/: AlertView.cpp  ButtonView.cpp  HeaderView.cpp  IconView.cpp  PageIndicatorView.cpp  ProgressBarView.cpp  SeparatorView.cpp  ShadowCardView.cpp  SheetView.cpp  StatusBarView.cpp  TextLabel.cpp
components/littlefs_storage/: CMakeLists.txt  littlefs_storage.c
components/littlefs_storage/include/: littlefs_storage.h
components/sd_storage/: CMakeLists.txt  sd_storage.c
components/sd_storage/include/: sd_storage.h
components/settings_store/: CMakeLists.txt  settings_store.c
components/settings_store/include/: settings_store.h
components/text_encoding/: CMakeLists.txt  gbk_table.c  text_encoding.c
components/text_encoding/include/: text_encoding.h
components/text_layout/: CMakeLists.txt  text_layout.c  text_paginator.c
components/text_layout/include/: text_layout.h  text_paginator.h
components/text_source/: CMakeLists.txt
components/text_source/src/: EncodingConverter.cpp  EncodingConverter.h  TextSource.cpp  TextWindow.cpp  TextWindow.h
components/ui_core/: CMakeLists.txt  ui_canvas.c  ui_core.c  ui_event.c  ui_font.c  ui_font_pfnt.c  ui_icon.c  ui_icon_data.h  ui_page.c  ui_render.c  ui_text.c  ui_touch.c  ui_widget.c
components/ui_core/fonts/: noto_sans_cjk_20.h  noto_sans_cjk_24.h  noto_sans_cjk_28.h  noto_sans_cjk_32.h  noto_sans_cjk_36.h  noto_sans_cjk_40.h
components/ui_core/include/: ui_canvas.h  ui_core.h  ui_event.h  ui_font.h  ui_font_pfnt.h  ui_icon.h  ui_page.h  ui_render.h  ui_text.h  ui_touch.h  ui_widget.h
components/ui_icon/: CMakeLists.txt  ui_icon.c
components/ui_icon/include/: ui_icon.h
components/ui_image/: CMakeLists.txt  ui_image.c
components/ui_image/include/: ui_image.h
components/ui_text/: CMakeLists.txt  ui_text.c
design/: index.html  reader.html
docs/: ink-ui-architecture.md  ui-implementation-roadmap.md  ui-wireframe-spec.md
docs/plans/: 2026-03-01-sdl-simulator-design.md  2026-03-01-sdl-simulator-plan.md  2026-03-06-ui-performance-profiling-design.md  2026-03-06-ui-performance-profiling-plan.md  2026-03-07-epd-timing-tuner-design.md  2026-03-07-epd-timing-tuner.md
fonts_data/: reading_24.pfnt  reading_32.pfnt  ui_font_16.pfnt  ui_font_24.pfnt
main/: CMakeLists.txt  board.c  board.h  idf_component.yml  main.c  main.cpp
main/controllers/: BootViewController.cpp  BootViewController.h  EpdTestViewController.cpp  EpdTestViewController.h  LibraryViewController.cpp  LibraryViewController.h  ReaderViewController.cpp  ReaderViewController.h
main/pages/: bookshelf_page.c  bookshelf_page.h  page_boot.c  page_boot.h  page_library.c  page_library.h  reader_page.c  reader_page.h
main/views/: BookCoverView.cpp  BookCoverView.h  BootLogoView.cpp  BootLogoView.h  PageIndex.cpp  PageIndex.h  ReaderContentView.cpp  ReaderContentView.h  StatusBarView.cpp  StatusBarView.h
openspec/: config.yaml
simulator/: CMakeLists.txt  fonts  sim_epd_driver.c  sim_freertos.c  sim_main.c  sim_stubs.c  sim_touch.c
simulator/compat/: epdiy.h  epdiy_font.c  miniz.h
simulator/data/book/: 使用说明.txt
simulator/platform/: esp_err.h  esp_log.h  esp_timer.h
simulator/platform/driver/: gpio.h  i2c.h
simulator/platform/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
simulator/src/: DesktopFontProvider.cpp  DesktopFontProvider.h  DesktopPlatform.cpp  DesktopPlatform.h  DesktopSystemInfo.cpp  DesktopSystemInfo.h  SdlDisplayDriver.cpp  SdlDisplayDriver.h  SdlTouchDriver.cpp  SdlTouchDriver.h  main.cpp
simulator/stubs/: sim_battery.c  sim_board.c  sim_epd_driver.c  sim_freertos.c  sim_md5.c  sim_nvs.c  sim_sd_storage.c  sim_ui_canvas.c
simulator/stubs/include/: battery.h  board.h  esp_err.h  esp_heap_caps.h  esp_littlefs.h  esp_log.h  esp_timer.h  nvs.h  nvs_flash.h  sdkconfig.h
simulator/stubs/include/driver/: gpio.h  i2c.h
simulator/stubs/include/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
simulator/stubs/include/mbedtls/: md5.h
testdata/: alice.epub
tools/: fontconvert.py  generate_bin_font.py  generate_font_bin.py  generate_fonts.sh  generate_gbk_table.py
tools/icons/: convert_icons.py
(+228 files in other folders)
